--- a/icbg.html
+++ b/icbg.html
@@ -65,7 +65,7 @@
     </div>
     <div class="mainmenu">
         <title>Formulaire d'inscription</title>
-        <p>Vous devez vous inscrire pour commencer à jouer. L'inscription est rapide et gratuite!</p>
+        <p>Vous devez vous inscrire pour commencer à jouer. L'inscription est rapide et gratuite!!</p>
         <p>Vous êtes déjà membre?</p><a href="#">Se connecter</a>
     </div>
         <div class="connect">
